[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.20"
pollster = "0.3.0"
wgpu = "0.18.0"
winit = "0.28"
env_logger = "0.10.1"
bytemuck = { version = "1.14.0", features = ["derive"] }
cgmath = "0.18.0"
egui = "0.23"
egui_wgpu_backend = "0.27.0"
egui_winit_platform = "0.20.0"
epi = "0.17.0"
